Minor bug fixing on mobile homepage

--- a/components/homepageImages.module.scss
+++ b/components/homepageImages.module.scss
@@ -36,6 +36,7 @@
 
   video {
     max-height: 100%;
+    max-width: none;
   }
 }
 
